--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="pass_joke">Pass Joke</string>
     <string name="gce_pass">GCE Pass Joke</string>
+    <string name="app_id_ad">APP_ID_FOR_AD</string>
 </resources>
